--- a/main.html
+++ b/main.html
@@ -5,27 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        body {
-            background-color: rgb(204, 204, 204)
-        }
-
-        h1 {
-            text-align: center;
-        }
-
-        h2 {
-            text-align: center
-        }
-
-        ul li {
-            list-style-type: none
-        }
-
-        li a {
-            text-decoration-line: none
-        }
-
+	<link rel="stylesheet" href="style.css">
+      <!-- ul li {
         ul {
             border: 2px solid black;
             border-radius: 5px;
@@ -52,39 +33,31 @@
             width: 650px;
         }
         
-    </style>
+    </style> -->
 </head>
 
 <body>
-    <section>
-        <h1>My Playlist</h1>
-
-        <div>
-            <ul>
-                <li><a href="http://#song 1" target="_blank">Song 1</a></li>
-                <li><a href="http://#song 2" target="_blank">Song 2</a></li>
-                <li><a href="http://#song 3" target="_blank">Song 3</a></li>
-                <li><a href="http://#song 4" target="_blank">Song 4</a></li>
-                <li><a href="http://#song 5" target="_blank">Song 5</a></li>
-            </ul>
-        </div>
-
-        <h2>Now Playing...</h2>
-
-        <div class="player_one">
-        <video controls>
-            <source src="https://www.w3schools.com/tags/movie.mp4" type="video/mp4">
-        </video>
-
-        <h2>MP3 songs</h2>
-        <audio controls>
-            <source class="player_two"src="https://www.pagalworld.com.se/files/download/id/64630" type="audio/mp3">
+	<section>
+		<h1 class="text_center">My Playlist</h1>
+		<div id="div1">
+			<ul>
+				<li><a href="song1" target="_blank">Song 1</a></li>
+				<li><a href="song1" target="_blank">Song 2</a></li>
+				<li><a href="song1" target="_blank">Song 3</a></li>
+				<li><a href="song1" target="_blank">Song 4</a></li>
+				<li><a href="song1" target="_blank">Song 5</a></li>
+			</ul>
+		</div>
+		<h2 class="text_center">Now Playing...</h2>
+		<div id="div2">
+			<video class="player_one"controls>
+				<source src="https://www.w3schools.com/tags/movie.mp4" type="video/mp4">
+			</video>
+			<h2 class="text_center">MP3 songs</h2>
+			<audio class="player_two" controls>
+	            <source src="https://www.pagalworld.com.se/files/download/id/64630" type="audio/mp3">
         </audio>
-
-        </div>
-
-
-    </section>
+		</div>
+	</section>
 </body>
-
 </html>
